--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
 				<a href="#" class="info fa fa-info-circle"><span>About</span></a>
 				<div class="inner">
 					<div class="content">
-						<h3>ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789 </h3>
-						<p>The history of the Internet has its origin in the efforts of wide area networking that originated in several computer science laboratories in the United States, United Kingdom, and France.[1] The U.S. Department of Defense awarded contracts as early as the 1960s, including for the development of the ARPANET project, directed by Robert Taylor and managed by Lawrence Roberts.</p>
+						<h3>Let ME know...! Let US solve...!!</h3>
+						<p>We are here to do something Innovative. This is the place where we can work together and support each other in all aspects to show their best in their required area. It might be a startup, IT, non-IT, ITES,  social, moral, legal, media, ethics, business many more. This page shows the information of 'Origin Of Idea'.</p>
 					</div>
 					<div class="copyright">
 						<h3>Follow me</h3>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="skype:rockego?chat" class="icon fa-skype"><span class="label">Skype</span></a></li>
 							<li><a href="https://www.facebook.com/myownpride/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/iamrock91/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://api.whatsapp.com/send?phone=919666100666" class="icon fa-dribbble"><span class="label">9666100666</span></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=919666100666" class="icon fa-whatsapp"><span class="label">9666100666</span></a></li>
 						</ul>
 						<!-- &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>. -->
-						&copy; Hexa9. Design & Developed by <a href="#">Sreekanth</a>. Contact: <a href="https://unsplash.com/">9666100666</a>.
+						&copy; Hexa9. Design & Development by <a href="#">Sreekanth</a>. Contact: <a href="https://api.whatsapp.com/send?phone=919666100666">9666100666</a>.
 					</div>
 				</div>
 			</footer>
